@@ -8,6 +8,7 @@ Version 1.5.4+svn:
  * Miscellaneous and bug fixes:
    * Fixed the list of the unit's attacks getting cut off in the right panel
      (bug #12297).
+   * Fixed wesnoth not to try to add duplicate ids to unit_map
 
 Version 1.5.4:
  * Editor2:
